src/cses/tower_of_hanoi/clang-tidy.txt
1 error generated.
Error while processing /Users/michael/repos/competitive-programming/src/cses/tower_of_hanoi/tower_of_hanoi.cpp.
/Users/michael/repos/competitive-programming/src/cses/tower_of_hanoi/tower_of_hanoi.cpp:3:10: error: 'cstdint' file not found [clang-diagnostic-error]
    3 | #include <cstdint>
      |          ^~~~~~~~~
Found compiler error(s).
